<resources>
    <string name="app_name">CaroGame</string>
    <string name="player_name">Player</string>
    <string name="enemy_name">Enemy</string>
    <string name="already_on">Already on</string>
    <string name="turned_on">Turned on</string>
    <string name="vs">VS</string>
    <string name="bluetooth_state">Bluetooth</string>
    <string name="find_devices">Find devices</string>
    <string name="create_game">Create Game</string>
    <string name="device">Device</string>
    <string name="address">Address</string>
    <string name="dissmiss">DISMISS</string>
    <string name="win">Win</string>
    <string name="lost">Lost</string>
    <string name="rate">Rate</string>
    <string name="streak">Streak</string>
    <string name="devices">Devices</string>
    <string name="new_devices">New devices</string>
    <string name="button_scan">Scan</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="show_paired_devices">Showing Paired Devices</string>
    <string name="turn_off">Turn off</string>
    <string name="start_game">Start Game</string>
    <string name="start_game_fail">Start fail</string>
    <string name="connected">Connected</string>
    <string name="connected_to">"Connected to "</string>
    <string name="device_connection_lost">Device connection was lost</string>
    <string name="loading_date">Loading Date</string>
    <string name="start_server_secure">start server secure</string>
    <string name="start_server_insecure">start server insecure</string>
    <string name="unable_to_connect_device">Unable to connect device</string>
    <string name="cant_connected">Can\'t connected</string>
    <string name="connect_to_game_fail">Connect to game fail</string>
    <string name="send_data_error">Send data error!</string>
    <string name="socket_error">Socket close error!</string>
    <string name="surrender">Surrender</string>
    <string name="surrender_title">Surrender</string>
    <string name="ays_msg">Are you sure?</string>
    <string name="quit">QUIT</string>
    <string name="app_id">136987409570</string>
    <string name="leave_title">Leave</string>
    <string name="reconnecting_title">Reconnecting</string>
    <string name="share">Share</string>
    <string name="facebook_app_id">741654635923028</string>
    <string name="title_activity_share_dialog">ShareDialogActivity</string>
    <string name="share_success">Share success</string>
    <string name="share_cancelled">Share cancelled</string>
    <string name="share_error">Share error</string>
    <string name="cannot_share">Cannot share</string>
</resources>
