<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="playerStorage"
            type="com.framgia.carogame.viewmodel.PlayerStorageViewModel"/>
    </data>

    <RelativeLayout
        style="@style/MatchParrentStyle"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <CheckBox
            android:id="@+id/bluetooth_check"
            style="@style/WrapContentStyle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/bluetooth_option_top_margin"
            android:clickable="true"
            android:text="@string/bluetooth_state"/>

        <Button
            android:id="@+id/find_devices"
            style="@style/WrapContentStyle"
            android:layout_below="@id/bluetooth_check"
            android:layout_marginTop="@dimen/find_device_top_margin"
            android:layout_toLeftOf="@id/bluetooth_check"
            android:layout_toStartOf="@id/bluetooth_check"
            android:enabled="false"
            android:onClick="findDevices"
            android:text="@string/find_devices"/>

        <Button
            android:id="@+id/create_game"
            style="@style/WrapContentStyle"
            android:layout_alignTop="@id/find_devices"
            android:layout_toEndOf="@id/bluetooth_check"
            android:layout_toRightOf="@id/bluetooth_check"
            android:enabled="false"
            android:onClick="startGame"
            android:text="@string/create_game"/>

        <TableLayout
            android:id="@+id/result"
            style="@style/MatchParrentStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/find_devices"
            android:layout_marginTop="@dimen/table_result_top_margin"
            android:stretchColumns="1,1">

            <TableRow
                style="@style/MatchParrentStyle">

                <TextView
                    style="@style/MyDefaultTextOnTable"
                    android:text="@string/win"/>

                <TextView
                    style="@style/RightTextOnTable"
                    android:layout_column="1"
                    android:text="@{playerStorage.getWin()}"/>

            </TableRow>

            <TableRow
                style="@style/MatchParrentStyle">

                <TextView
                    style="@style/MyDefaultTextOnTable"
                    android:text="@string/lost"/>

                <TextView
                    style="@style/RightTextOnTable"
                    android:layout_column="1"
                    android:text="@{playerStorage.getLost()}"/>
            </TableRow>

            <TableRow
                style="@style/MatchParrentStyle">

                <TextView
                    style="@style/MyDefaultTextOnTable"
                    android:text="@string/rate"/>

                <TextView
                    style="@style/RightTextOnTable"
                    android:layout_column="1"
                    android:text="@{playerStorage.getRatePercent()}"/>
            </TableRow>

            <TableRow
                style="@style/MatchParrentStyle">

                <TextView
                    style="@style/MyDefaultTextOnTable"
                    android:text="@string/streak"/>

                <TextView
                    style="@style/RightTextOnTable"
                    android:layout_column="1"
                    android:text="@{playerStorage.getStreak()}"/>
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/device_name"
            style="@style/WrapContentStyle"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/device_name_top_margin"
            android:layout_toLeftOf="@id/bluetooth_check"
            android:layout_toStartOf="@id/bluetooth_check"
            android:text="@string/device"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/device_address"
            style="@style/WrapContentStyle"
            android:layout_alignTop="@id/device_name"
            android:layout_toEndOf="@id/bluetooth_check"
            android:layout_toRightOf="@id/bluetooth_check"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

    </RelativeLayout>
</layout>